<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~
  ~ Visit https://github.com/donmahallem/andlol for more info!
  ~
  ~ Romanes eunt domus - Brian!
  -->

<resources>

    <string name="app_name">MokeuLol</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lore">Lore</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="abilities">Abilities</string>
    <string name="check">Check</string>
    <string name="api_token">Api-Token</string>
    <string name="api_token_description">The Api-Token to be used by this App.</string>
    <string name="api_token_description_small">An Api-Token is required to communicate with Riot\'s-Servers. Click on the Button below to be redirected to the site where you can retrieve this Api-Token.</string>
    <string name="log_into_riot_dev">Log into the Riot Dev Website.</string>
    <string name="copy_the_api_token">Copy the Api-Token</string>
    <string name="paste_it_above_and_verify">Paste the Api-Token above and let it verify</string>
    <string name="instructions">Instructions</string>
    <string name="checking">Checking</string>
    <string name="starting">Starting...</string>
    <string name="checking_token">Checking Token...</string>
    <string name="checked">Checked!</string>
    <string name="network_error">Network Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="passive">Passive</string>
    <string name="pref_about">About</string>
    <string name="pref_cache_statistics">Cache-Statistics</string>
    <string name="pref_cache_statistics_queries">Queries</string>
    <string name="pref_cache_statistics_hits">Hits</string>
    <string name="pref_cache_statistics_miss">Miss</string>
    <string name="pref_cache_statistics_queries_summary">The amount of queries that where issued</string>
    <string name="pref_cache_statistics_hits_summary">The amount of queries that hit the cache</string>
    <string name="pref_cache_statistics_miss_summary">The amount of queries that missed the cache</string>
    <string name="summoner">Summoner</string>
    <string name="champion">Champion</string>
    <string name="loading">Loading</string>
    <string name="search_summoner">Search Summoner</string>
    <string name="favorites">Favorites</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="ascended_event">Ascended Event</string>
    <string name="building_kill">Building Kill</string>
    <string name="capture_point">Capture Point</string>
    <string name="champion_kill">Champion Kill</string>
    <string name="elite_monster_kill">Elite Monster Kill</string>
    <string name="item_destroyed">Item destroyed</string>
    <string name="item_purchased">Item purchased</string>
    <string name="item_sold">Item sold</string>
    <string name="item_undo">Item undo</string>
    <string name="poro_king_summon">Poro King summon</string>
    <string name="skill_level_up">Skill Level Up</string>
    <string name="ward_kill">Ward killed</string>
    <string name="ward_placed">Ward placed</string>
    <string name="error_requesting_server">Error requesting Server</string>
    <string name="error_player_not_in_match">Player isn\'t in a Match</string>
    <string name="match_history">Match History</string>
    <string name="current_game">Current Game</string>
    <string name="runes">Runes</string>
    <string name="masteries">Masteries</string>
    <string name="league">League</string>
    <string name="summary">Summary</string>
    <string name="active">Active</string>
    <string name="retry">Retry</string>
</resources>
