<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014.
  ~
  ~ Visit https://github.com/donmahallem/andlol for more info!
  ~
  ~ Romanes eunt domus - Brian!
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_about">
        <Preference
            android:defaultValue="false"
            android:key="pref_key_auto_delete"
            android:summary="@string/pref_cache_statistics_queries"
            android:title="@string/pref_cache_statistics_queries_summary"/>
        <Preference
            android:dependency="pref_key_auto_delete"
            android:key="pref_key_sms_delete_limit"
            android:summary="@string/pref_cache_statistics_hits_summary"
            android:title="@string/pref_cache_statistics_hits"/>
        <Preference
            android:dependency="pref_key_auto_delete"
            android:key="pref_key_mms_delete_limit"
            android:summary="@string/pref_cache_statistics_miss_summary"
            android:title="@string/pref_cache_statistics_miss"/>
    </PreferenceCategory>
</PreferenceScreen>