<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014.
  ~
  ~ Visit https://github.com/donmahallem/andlol for more info!
  ~
  ~ Romanes eunt domus - Brian!
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/Text.DescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_token"/>

        <TextView
            style="@style/Text.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_token_description"/>

        <EditText
            android:id="@id/apiToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@id/btnCheckToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:background="@drawable/background_borderless_buttonbar"
        android:text="@string/check"/>
</RelativeLayout>